--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,13 @@
     "compilerOptions": {
       "outDir": "./dist/",
       "module": "es6",
-      "target": "es5",
+      "target": "es6",
       "sourceMap": true,
       "allowJs": true,
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "types": ["reflect-metadata"],
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true
     }
   }
   
